--- a/src/App.css
+++ b/src/App.css
@@ -59,16 +59,18 @@ a {
 .countries-container {
   max-width: 1200px;
   margin-top: 16px;
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 64px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   margin-inline: auto;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .country-card {
   display: inline-block;
-  width: 250px;
+  /* width: 250px; */
   border-radius: 8px;
   overflow: hidden;
   padding-bottom: 24px;
